2003-10-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area.c

	Fixed typo
	
	* cong-eel-graphic-effects.c

	Fixed header filename
	
	* cong-editor-area-text-fragment.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c

	Editor areas now support mouse cursors; text areas use an I-beam

	* cong-editor-area-pixbuf.c, cong-editor-area-structural.c, cong-editor-area.c, cong-editor-area.h

	Prelight for icons in structural headers
	
	* cong-eel-graphic-effects.c, cong-eel-graphic-effects.h, Makefile.am

	New files, copied and pasted from eel
	
	* cong-node.c

	Self-test now handles children of an entity reference correctly

	* cong-editor-area-text-fragment.c, cong-editor-node-text.c

	Initial attempt to do prelighting of text fragments

2003-10-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-cleanup-source.c

	Fix for bug #125119
	
	* cong-document.c, cong-document.h, cong-dom-view.c, cong-editor-area.c, cong-location.c, cong-location.h, cong-overview-view.c, cong-tree-view.c, cong-tree-view.h, cong-util.c, cong-util.h

	Clicking on tree views now updates the selection.
	
	* cong-document.c, cong-document.h, cong-editor-area-expander.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c, cong-range.c, cong-range.h, cong-selection.h, cong-tree-view.c, select.c

	Big overhaul of selection support within editor widget

2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-span-tag.c, cong-editor-area-structural.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, plugin-paragraph-area-paragraph.c

	Moved the copy-and-pasted area state debugging code into a utility function

2003-10-20  David Hoover <karma@deadmoose.com>
 
 	* cong-file-save.c, cong-primary-window.c, global.h
 
 	Change the toolbar to give 'save' as an option instead of 'save as' 
